--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testCompile "com.nhaarman:mockito-kotlin:1.5.0"
+    compile 'com.google.dagger:dagger:2.16'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.16'
+    compile 'com.google.dagger:dagger-android:2.16'
+    compile 'com.google.dagger:dagger-android-support:2.16' // if you use the support libraries
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.16'
 }
